# ECE414-McLoughlin-Stopford

FinalProjFiles/: CMakeLists.txt  README.txt  baro.c  getPWM.c  getPWM.h  gyro.c  main.c  pwm_pin.c  pwm_pin.h  pwm_read.c
FinalProjFiles/KiCAD/: #auto_saved_files#  finalprojschematic.kicad_pro  finalprojschematic.kicad_sch  projectLibrary.kicad_sym  sym-lib-table  ~finalprojschematic.kicad_sch.lck
FinalProjTestFiles/: CMakeLists.txt  baro.c  baro.h  control.c  control.h  getPWM.c  getPWM.h  gyro.c  gyro.h  main.c  pwm_pin.c  pwm_pin.h
Lab02/: led_out.c  led_out.h  sw_in.c  sw_in.h
Lab03/: CMakeLists.txt  debounce_sw1.c  debounce_sw1.h  debounce_sw2.c  debounce_sw2.h  main.c
Lab04/: CMakeLists.txt  ts_lcd.c  ts_test.c
Lab04/sch/: #auto_saved_files#  Lab04.kicad_pro  Lab04.kicad_sch  ~Lab04.kicad_sch.lck
Lab05/: CMakeLists.txt  TouchDisplay.c  TouchDisplay.h  inputnum.c  inputnum.h  main.c  ts_lcd.c
Lab1/: blink2.c
Lab2/: main.c
sensorTestFiles/: CMakeLists.txt  baro.c  baro.h  gyro.c  gyro.h  gyro2.c  main.c
sensorTestFiles/modifiedBMP5/: common.c
